monitor/prometheus/state-metrics-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-state-metrics
  namespace: kube-system
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: kube-state-metrics
    spec:
      serviceAccountName: kube-state-metrics
      containers:
      - name: kube-state-metrics
#        image: gcr.io/google_containers/kube-state-metrics:v0.5.0
        image: quay.io/coreos/kube-state-metrics:v0.5.0
        ports:
        - containerPort: 8080
