monitor/prometheus/grafana.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: kube-system
spec:
#  type: NodePort
  ports:
  - port: 3000
    protocol: TCP
    name: http
#    nodePort: 30022
  selector:
    app: grafana
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: grafana
      containers:
      - name: grafana
        #image: docker.io/istio/grafana:0.7.1
        image: grafana/grafana
        imagePullPolicy: IfNotPresent
       # args:
       #   - --grafana-url=http://grafana.icsoc.net
        ports:
          - containerPort: 3000
        volumeMounts:
        - mountPath: /data/grafana
          name: grafana-data
      volumes:
      - name: grafana-data
        emptyDir: {}
---
