monitor/prometheus/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus
  namespace: kube-system
  labels:
    app: prometheus
    component: core
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: NodePort
  ports:
  - name: webui
    port: 9090
    targetPort: 9090
    nodePort: 30900
    protocol: TCP
    #  name: webui
  selector:
    app: prometheus
    component: core
