monitor/prometheus/prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
  labels:
    name: prometheus
  name: prometheus
  namespace: kube-system
spec:
  selector:
    app: prometheus
  ports:
  - name: prometheus
    protocol: TCP
    port: 9090
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: prometheus
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      name: prometheus
      labels:
        app: prometheus
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      serviceAccountName: prometheus
      containers:
      - name: prometheus
#        image: registry.cn-beijing.aliyuncs.com/icsoc/prometheus:v2.0.0
        image: docker.io/prom/prometheus:v2.3.1
        imagePullPolicy: IfNotPresent
        args:
          - '--storage.tsdb.retention=10d'
          - '--config.file=/etc/prometheus/prometheus.yml'
          - '--storage.tsdb.path=/prometheus/data'
        ports:
        - name: web
          containerPort: 9090
        resources:
          requests:
            cpu: 300m
            memory: 500M
          limits:
            cpu: 800m
            memory: 3072M
        volumeMounts:
        - name: config-volume
          mountPath: /etc/prometheus
        - name: prome-data
          mountPath: /prometheus/data
      volumes:
      - name: config-volume
        configMap:
          name: prometheus
      - name: prome-data
        persistentVolumeClaim:
           claimName: prometheus-pvc
     
---
